--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ansi-to-html": "^0.2.0",
+    "colors": "^0.6.2",
     "event-stream": "^3.1.7",
     "express": "^4.6.1",
     "js-yaml": "^3.1.0",
