--- a/package.json
+++ b/package.json
@@ -3,18 +3,38 @@
   "version": "1.0.0",
   "description": "A personal build server.",
   "main": "index.js",
+  "bin": "./bin/bran",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Unlicense",
   "dependencies": {
-    "ansi-to-html": "^0.2.0",
+    "body-parser": "^1.5.0",
     "colors": "^0.6.2",
+    "commander": "^2.3.0",
     "event-stream": "^3.1.7",
     "express": "^4.6.1",
     "js-yaml": "^3.1.0",
+    "mkdirp": "^0.5.0",
+    "moment": "^2.7.0",
+    "pushover": "^1.3.6",
     "q": "^1.0.1",
-    "request": "^2.37.0"
-  }
+    "request": "^2.37.0",
+    "text-table": "^0.2.0"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/briangreenery/bran.git"
+  },
+  "keywords": [
+    "build",
+    "continuous",
+    "integration"
+  ],
+  "bugs": {
+    "url": "https://github.com/briangreenery/bran/issues"
+  },
+  "homepage": "https://github.com/briangreenery/bran"
 }
