--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Brian Green",
   "license": "Unlicense",
   "dependencies": {
     "body-parser": "^1.5.0",
     "colors": "^0.6.2",
     "commander": "^2.3.0",
+    "content-range": "^0.2.0",
     "event-stream": "^3.1.7",
     "express": "^4.6.1",
     "js-yaml": "^3.1.0",
@@ -20,8 +21,11 @@
     "moment": "^2.7.0",
     "pushover": "^1.3.6",
     "q": "^1.0.1",
+    "range-parser": "^1.0.0",
+    "reconnect-core": "^0.2.0",
     "request": "^2.37.0",
-    "text-table": "^0.2.0"
+    "text-table": "^0.2.0",
+    "through": "^2.3.4"
   },
   "devDependencies": {},
   "repository": {
