--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brian Green",
   "license": "Unlicense",
   "dependencies": {
+    "backoff": "^2.4.0",
     "body-parser": "^1.5.0",
     "colors": "^0.6.2",
     "commander": "^2.3.0",
@@ -22,10 +23,8 @@
     "pushover": "^1.3.6",
     "q": "^1.0.1",
     "range-parser": "^1.0.0",
-    "reconnect-core": "^0.2.0",
     "request": "^2.37.0",
-    "text-table": "^0.2.0",
-    "through": "^2.3.4"
+    "text-table": "^0.2.0"
   },
   "devDependencies": {},
   "repository": {
