Fix path to binary

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bran",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A command line based build server.",
   "main": "index.js",
-  "bin": "./bin/bran",
+  "bin": "./bin/bran.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
